add VMD underlying optimization

--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6360ead7",
+   "id": "6990e8b4",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -68,17 +68,20 @@
     "        - [Complete Ensembles Empirical Mode Decomposition with Assisted Noise (CEEMDAN) (2012, Torres et al.)](#toc2_2_4_5_4_)    \n",
     "        - [Improved Complete Ensemble Empirical Mode Decomposition with Assisted Noise (ICEEMDAN) (2014, Colominas et al.)](#toc2_2_4_5_5_)    \n",
     "        - [Variational Mode Decomposition (VMD)](#toc2_2_4_5_6_)    \n",
+    "          - [Pre-requisites: Lagrange function](#toc2_2_4_5_6_1_)    \n",
+    "          - [Pre-requisites: Alternate Direction Method of Multiplier (ADMM)](#toc2_2_4_5_6_2_)    \n",
     "        - [MEMD](#toc2_2_4_5_7_)    \n",
     "        - [Noise-Assisted Multivariate Empirical Mode Decomposition (NA-MEMD)](#toc2_2_4_5_8_)    \n",
     "        - [Pre-requisites: Hilbert Transform](#toc2_2_4_5_9_)    \n",
     "        - [Pre-Pre-requisites: Cauchy Principle Value](#toc2_2_4_5_10_)    \n",
-    "        - [Hilbert Spectrum Analysis (HSA)](#toc2_2_4_5_11_)    \n",
-    "      - [Sample comprehensive implementation and comparison between methods](#toc2_2_4_6_)    \n",
-    "      - [Additional: How to evaluate the smoothing technique](#toc2_2_4_7_)    \n",
-    "        - [Mean Squared Error (MSE)](#toc2_2_4_7_1_)    \n",
-    "        - [Mean Absolute Error (MAE)](#toc2_2_4_7_2_)    \n",
-    "        - [Smoothness Metrics (Variance of the First Difference)](#toc2_2_4_7_3_)    \n",
-    "        - [Signal-to-Noise Ratio (SNR)](#toc2_2_4_7_4_)    \n",
+    "      - [Hilbert Spectrum Analysis (HSA)](#toc2_2_4_6_)    \n",
+    "      - [Sample comprehensive implementation and comparison between methods](#toc2_2_4_7_)    \n",
+    "      - [Additional: How to evaluate the smoothing technique](#toc2_2_4_8_)    \n",
+    "        - [Mean Squared Error (MSE)](#toc2_2_4_8_1_)    \n",
+    "        - [Mean Absolute Error (MAE)](#toc2_2_4_8_2_)    \n",
+    "        - [Smoothness Metrics (Variance of the First Difference)](#toc2_2_4_8_3_)    \n",
+    "        - [Signal-to-Noise Ratio (SNR)](#toc2_2_4_8_4_)    \n",
+    "        - [Fuzzy Entropy (FE)](#toc2_2_4_8_5_)    \n",
     "    - [Dealing with Nulls and Missing data](#toc2_2_5_)    \n",
     "      - [Forward/ Back fills => LOCF/ NOCB](#toc2_2_5_1_)    \n",
     "      - [Interpolation](#toc2_2_5_2_)    \n",
@@ -96,7 +99,11 @@
     "        - [Pruned Exact Linear Time (PELT)](#toc2_2_6_9_2_)    \n",
     "        - [Kernel Change Point algorithm](#toc2_2_6_9_3_)    \n",
     "        - [Dynamic Programming CPD](#toc2_2_6_9_4_)    \n",
-    "    - [Honor of Recognition: Kalman Filter](#toc2_2_7_)    \n",
+    "    - [Analysis](#toc2_2_7_)    \n",
+    "      - [Pre-requisites: Entropy (Information Entropy)](#toc2_2_7_1_)    \n",
+    "      - [Pre-requisites: Correlation Coefficient](#toc2_2_7_2_)    \n",
+    "      - [Approximate/ Sample Entropy (ApEn/ SampEn)](#toc2_2_7_3_)    \n",
+    "    - [Honor of Recognition: Kalman Filter](#toc2_2_8_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -4615,6 +4622,66 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca6e5946",
+   "metadata": {},
+   "source": [
+    "###### <a id='toc2_2_4_5_6_1_'></a>[Pre-requisites: Lagrange function](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dcb72e3",
+   "metadata": {},
+   "source": [
+    "Lagrange method is a strategy for finding the local extrema of a function subject to an equation constraint. The main idea of Lagrange os tp convert a constrained problem into a form such that the derivative test of an unconstrained problem can still be applied. The relationship between the gradient of the function and gradients of the constraints rather naturally leads to a reformulation of the original problem, known as the Lagrange function\n",
+    "\n",
+    "In general case, the Lagrange is defined as $$\\mathcal{L}(x, \\lambda) = f(x) + <\\lambda, g(x)>$$\n",
+    "\n",
+    "Where the notation <. , .> denotes an inner product\n",
+    "\n",
+    "The value $\\lambda$ is called the Lagrange multiplier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4002def4",
+   "metadata": {},
+   "source": [
+    "###### <a id='toc2_2_4_5_6_2_'></a>[Pre-requisites: Alternate Direction Method of Multiplier (ADMM)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5c8c390",
+   "metadata": {},
+   "source": [
+    "The Alternate Direction Method of Multipliers is in algorithm that solves convex optimization problems by breaking them into smaller pieces, each of which are then easier to handle. \n",
+    "\n",
+    "In general, ADMM is designed for problems of the form:\n",
+    "\n",
+    "$$\\min_{x, z} \\; f(x) + g(z) \n",
+    "\\quad \\text{s.t.} \\quad A x + B z = c$$\n",
+    "\n",
+    "Where\n",
+    "* f(x) and g(x) are objective components\n",
+    "\n",
+    "* Ax + Bz = c is a constraint\n",
+    "\n",
+    "ADMM uses the Augmented Lagrangian:\n",
+    "\n",
+    "$$\\mathcal{L}_\\rho(x, z, y) \n",
+    "= f(x) + g(z) \n",
+    "+ y^\\top (Ax + Bz - c) \n",
+    "+ \\frac{\\rho}{2} \\left\\| Ax + Bz - c \\right\\|_2^2$$\n",
+    "\n",
+    "where\n",
+    "* y: lagrange multiplier\n",
+    "\n",
+    "* $\\rho$: penalty parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "34825f72",
    "metadata": {},
    "source": [
@@ -4622,7 +4689,7 @@
     "\n",
     "The main idea of VMD is to decompose a signal into a set of modes (IMFs) that are compact around a center frequency, by solving a constrained optimization problem that minimizes the sum of the bandwidths of the modes while reconstructing the original signal.\n",
     "\n",
-    "VMD assumes that a signal x(t) can be deocmposed into K modes ${u_k(t)}$, each with a specific center frequency $\\omega_k$:\n",
+    "VMD assumes that a signal x(t) can be decomposed into K modes ${u_k(t)}$, each with a specific center frequency $\\omega_k$:\n",
     "\n",
     "$$x(t) = \\sum_{k = 1}^{K}u_k(t)$$\n",
     "\n",
@@ -4638,9 +4705,15 @@
     "\n",
     "* The term ($\\delta(t) + \\frac{j}{\\pi t}$) is the Hilbert transform kernel -> ensures analytic signal representation\n",
     "\n",
-    "* Multiplying by $e^{-j\\omega_k t}$ shifts each moe to baseband for bandwidth measurement\n",
+    "* Multiplying by $e^{-j\\omega_k t}$ (the center frequency) shifts each mode to baseband for bandwidth measurement\n",
     "\n",
-    "* The objective minimizes the bandwidth (squared) of all modes"
+    "* The objective minimizes the bandwidth (squared) of all modes\n",
+    "\n",
+    "To solve the optimization problem, VMD uses the Augmented Lagrangian method, which introduces a multiplier $\\lambda(x)$ for the reconstruction constraint: $$\\mathcal{L}(\\{u_k\\}, \\{\\omega_k\\}, \\lambda) =\\alpha \\sum_k \\left\\| \\partial_t \\Big[ \\big( \\delta(t) + \\tfrac{j}{\\pi t} \\big) * u_k(t) \\Big] e^{-j \\omega_k t} \\right\\|_2^2 + \\left\\| f(t) - \\sum_k u_k(t) \\right\\|_2^2 + \\left\\langle \\lambda(t), f(t) - \\sum_k u_k(t) \\right\\rangle$$\n",
+    "\n",
+    "with $\\alpha$: penalty parameter to control bandwidth smoothness\n",
+    "\n",
+    "$\\lambda(t)$: Lagrange multiplier enforcing the reconstruction constraint"
    ]
   },
   {
@@ -4937,6 +5010,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c89dc49a",
+   "metadata": {},
+   "source": [
+    "##### Dynamic Mode Decomposition (DMD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e586ee9",
    "metadata": {},
    "source": [
@@ -5014,7 +5095,7 @@
    "id": "60b3208e",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_4_5_11_'></a>[Hilbert Spectrum Analysis (HSA)](#toc0_)"
+    "#### <a id='toc2_2_4_6_'></a>[Hilbert Spectrum Analysis (HSA)](#toc0_)"
    ]
   },
   {
@@ -5170,7 +5251,7 @@
    "id": "1712e9f6",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_4_6_'></a>[Sample comprehensive implementation and comparison between methods](#toc0_)"
+    "#### <a id='toc2_2_4_7_'></a>[Sample comprehensive implementation and comparison between methods](#toc0_)"
    ]
   },
   {
@@ -5360,7 +5441,7 @@
    "id": "c6b5ab23",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_4_7_'></a>[Additional: How to evaluate the smoothing technique](#toc0_)"
+    "#### <a id='toc2_2_4_8_'></a>[Additional: How to evaluate the smoothing technique](#toc0_)"
    ]
   },
   {
@@ -5381,7 +5462,7 @@
    "id": "6b4840db",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_7_1_'></a>[Mean Squared Error (MSE)](#toc0_)\n",
+    "##### <a id='toc2_2_4_8_1_'></a>[Mean Squared Error (MSE)](#toc0_)\n",
     "\n",
     "Measures how far the smoothed signal deviates from the original => The lower the better\n",
     "\n",
@@ -5431,7 +5512,7 @@
    "id": "6b9aedbd",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_7_2_'></a>[Mean Absolute Error (MAE)](#toc0_)\n",
+    "##### <a id='toc2_2_4_8_2_'></a>[Mean Absolute Error (MAE)](#toc0_)\n",
     "\n",
     "is less sensitive to large deviations than MSE: \n",
     "\n",
@@ -5481,7 +5562,7 @@
    "id": "05d363b7",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_7_3_'></a>[Smoothness Metrics (Variance of the First Difference)](#toc0_)\n",
+    "##### <a id='toc2_2_4_8_3_'></a>[Smoothness Metrics (Variance of the First Difference)](#toc0_)\n",
     "\n",
     "A smoother signal has smaller variance of consecutive differences\n",
     "\n",
@@ -5530,12 +5611,26 @@
    "id": "d0374ba7",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_7_4_'></a>[Signal-to-Noise Ratio (SNR)](#toc0_)\n",
+    "##### <a id='toc2_2_4_8_4_'></a>[Signal-to-Noise Ratio (SNR)](#toc0_)\n",
     "\n",
     "How much variance is explained by the smooth version:\n",
     "\n",
     "$$SNR = 10.log_{10}(\\frac{Var(\\hat{y}_t)}{Var(y_t - \\hat{y}_t)})$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcd6a1db",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_8_5_'></a>[Fuzzy Entropy (FE)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "801a0376",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5980,7 +6075,43 @@
    "id": "ea761c16",
    "metadata": {},
    "source": [
-    "### Analysis"
+    "### <a id='toc2_2_7_'></a>[Analysis](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a38335",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_7_1_'></a>[Pre-requisites: Entropy (Information Entropy)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44339c13",
+   "metadata": {},
+   "source": [
+    "IE can be calculated by \n",
+    "\n",
+    "$$IE = - \\sum_{i = 1}^{n}p(IMF_i) * log_p(IMF_i)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0a40bdf",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc2_2_7_2_'></a>[Pre-requisites: Correlation Coefficient](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ad77853",
+   "metadata": {},
+   "source": [
+    "Correlation coefficient R is calculated by:\n",
+    "\n",
+    "$$R(s, IMF_j) = \\frac{\\sum_{i = 1}^{N}(s - \\overline{s})(IMF_j - \\overline{IMF_j})}{\\sqrt{\\sum_{i = 1}^{N}(s - \\overline{s})^2} * \\sqrt{\\sum_{i = 1}^{N}(IMF_j - \\overline{IMF_j})^2}}$$"
    ]
   },
   {
@@ -5988,7 +6119,7 @@
    "id": "64953e7c",
    "metadata": {},
    "source": [
-    "#### Approximate/ Sample Entropy (ApEn/ SampEn)"
+    "#### <a id='toc2_2_7_3_'></a>[Approximate/ Sample Entropy (ApEn/ SampEn)](#toc0_)"
    ]
   },
   {
@@ -6001,10 +6132,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bb710f8",
+   "metadata": {},
+   "source": [
+    "The output signals from the decomposition will be split into \n",
+    "\n",
+    "* Noise-dominant components\n",
+    "* Transition components\n",
+    "* Useful signal components\n",
+    "\n",
+    "Using Correlation Coefficient R + Information Entropy to split the signals from ICEEMDAN\n",
+    "\n",
+    "Another Decomposition algorithm can be used afterwards to further decompose the output transition signal (i.e. VMD decomposes output from ICEEMDAN, produces the ICEEMDAN-VMD framework)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4266e8df",
+   "metadata": {},
+   "source": [
+    "The Comprehensive Index CI combined the information entropy IE with the correlation coefficient R is proposed, which is calculated by:\n",
+    "\n",
+    "$$CI = N(IE) * N(R)$$\n",
+    "\n",
+    "where N(x) represents the normalization processing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e955925",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "dcdf9e4a",
    "metadata": {},
    "source": [
-    "### <a id='toc2_2_7_'></a>[Honor of Recognition: Kalman Filter](#toc0_)"
+    "### <a id='toc2_2_8_'></a>[Honor of Recognition: Kalman Filter](#toc0_)"
    ]
   }
  ],
