--- a/notebooks/track1_forecasting_benchmark.ipynb
+++ b/notebooks/track1_forecasting_benchmark.ipynb
@@ -10,18 +10,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ab57f3a",
+   "id": "ae032497",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
     "- [Time Series Forecasting Benchmark](#toc1_)    \n",
     "  - [Data Setup](#toc1_1_)    \n",
-    "    - [Holt-Winter Triple Exponential smoothing forecasting](#toc1_1_1_)    \n",
-    "      - [Pre-requisites: Exponential Smoothing (ES)](#toc1_1_1_1_)    \n",
-    "      - [History of Development](#toc1_1_1_2_)    \n",
-    "        - [Damped Holt's double exponential smoothing](#toc1_1_1_2_1_)    \n",
-    "    - [Gray Forecasting](#toc1_1_2_)    \n",
-    "    - [Fuzzy Logic](#toc1_1_3_)    \n",
+    "    - [AutoRegressive Integrated Moving Average (ARIMA)](#toc1_1_1_)    \n",
+    "      - [Pre-requisites: The Moving Average (MA)](#toc1_1_1_1_)    \n",
+    "    - [Holt-Winter Triple Exponential smoothing forecasting](#toc1_1_2_)    \n",
+    "      - [Pre-requisites: Exponential Smoothing (ES)](#toc1_1_2_1_)    \n",
+    "      - [History of Development](#toc1_1_2_2_)    \n",
+    "        - [Damped Holt's double exponential smoothing](#toc1_1_2_2_1_)    \n",
+    "    - [Gray Forecasting](#toc1_1_3_)    \n",
+    "    - [Fuzzy Logic](#toc1_1_4_)    \n",
+    "  - [Multivariate Forecasting](#toc1_2_)    \n",
+    "    - [Informer (Zhou et al., 2021)](#toc1_2_1_)    \n",
+    "    - [N-BEATS (Oreshkin et al., 2020)](#toc1_2_2_)    \n",
+    "    - [SCINet (Liu et al., 2021)](#toc1_2_3_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -219,7 +225,7 @@
    "id": "8ba3e7db",
    "metadata": {},
    "source": [
-    "### AutoRegressive Integrated Moving Average (ARIMA)"
+    "### <a id='toc1_1_1_'></a>[AutoRegressive Integrated Moving Average (ARIMA)](#toc0_)"
    ]
   },
   {
@@ -227,7 +233,7 @@
    "id": "1470b878",
    "metadata": {},
    "source": [
-    "#### Pre-requisites: The Moving Average (MA)"
+    "#### <a id='toc1_1_1_1_'></a>[Pre-requisites: The Moving Average (MA)](#toc0_)"
    ]
   },
   {
@@ -235,7 +241,7 @@
    "id": "671040c3",
    "metadata": {},
    "source": [
-    "### <a id='toc1_1_1_'></a>[Holt-Winter Triple Exponential smoothing forecasting](#toc0_)\n"
+    "### <a id='toc1_1_2_'></a>[Holt-Winter Triple Exponential smoothing forecasting](#toc0_)\n"
    ]
   },
   {
@@ -243,7 +249,7 @@
    "id": "3d4a78bc",
    "metadata": {},
    "source": [
-    "#### <a id='toc1_1_1_1_'></a>[Pre-requisites: Exponential Smoothing (ES)](#toc0_)"
+    "#### <a id='toc1_1_2_1_'></a>[Pre-requisites: Exponential Smoothing (ES)](#toc0_)"
    ]
   },
   {
@@ -301,7 +307,7 @@
    "id": "55d363d2",
    "metadata": {},
    "source": [
-    "#### <a id='toc1_1_1_2_'></a>[History of Development](#toc0_)"
+    "#### <a id='toc1_1_2_2_'></a>[History of Development](#toc0_)"
    ]
   },
   {
@@ -340,7 +346,7 @@
    "id": "d45a5c47",
    "metadata": {},
    "source": [
-    "##### <a id='toc1_1_1_2_1_'></a>[Damped Holt's double exponential smoothing](#toc0_)\n",
+    "##### <a id='toc1_1_2_2_1_'></a>[Damped Holt's double exponential smoothing](#toc0_)\n",
     "\n",
     "Level: $$\\ell_t = \\alpha y_t + (1-\\alpha)(\\ell_{t-1} + \\phi b_{t-1})$$\n",
     "\n",
@@ -460,7 +466,7 @@
    "id": "0335cca9",
    "metadata": {},
    "source": [
-    "### <a id='toc1_1_2_'></a>[Gray Forecasting](#toc0_)"
+    "### <a id='toc1_1_3_'></a>[Gray Forecasting](#toc0_)"
    ]
   },
   {
@@ -468,12 +474,50 @@
    "id": "86f372e2",
    "metadata": {},
    "source": [
-    "### <a id='toc1_1_3_'></a>[Fuzzy Logic](#toc0_)"
+    "### <a id='toc1_1_4_'></a>[Fuzzy Logic](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a8d7b8d5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eef52ba",
+   "metadata": {},
+   "source": [
+    "## <a id='toc1_2_'></a>[Multivariate Forecasting](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90253b6e",
+   "metadata": {},
+   "source": [
+    "### <a id='toc1_2_1_'></a>[Informer (Zhou et al., 2021)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e850d395",
+   "metadata": {},
+   "source": [
+    "### <a id='toc1_2_2_'></a>[N-BEATS (Oreshkin et al., 2020)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f95ef6",
+   "metadata": {},
+   "source": [
+    "### <a id='toc1_2_3_'></a>[SCINet (Liu et al., 2021)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "738126f2",
    "metadata": {},
    "source": []
   }
