--- a/notebooks/track3_regression_benchmark.ipynb
+++ b/notebooks/track3_regression_benchmark.ipynb
@@ -66,20 +66,10 @@
     "from sklearn.preprocessing import PowerTransformer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "#Fetching stock data with the given name\n",
-    "import yfinance as yf\n",
-    "\n",
     "#for technical analysis\n",
     "import ta\n",
     "import mplfinance as mpf\n",
     "import plotly.graph_objects as go\n",
-    "\n",
-    "#Time series decomposition and forecasting prep\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from statsmodels.tsa.stattools import adfuller, acf, pacf, kpss\n",
-    "\n",
-    "#Forecasting models\n",
-    "from statsmodels.tsa.holtwinters import SimpleExpSmoothing, Holt, ExponentialSmoothing # Holt-Winter\n",
     "\n",
     "#Evaluation\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score"
@@ -115,17 +105,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc818ef9",
-   "metadata": {},
-   "source": [
-    "#### <a id='toc1_1_1_1_'></a>[Pre-requisites: The Convolution integration Recurrent Network](#toc0_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "95479e79",
    "metadata": {},
-   "source": []
+   "source": [
+    "ROCKET applies global max pooling and PPV (proportion of positive values) pooling to the resulting convolution output to produce 2 features per kernel per input time series, for a total of 20,000 features per input time series. These kernels are random in terms of their length, weights, bias, dilation and padding"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,6 +177,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae0b93e5",
+   "metadata": {},
+   "source": [
+    "#### Catch22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82197325",
    "metadata": {},
    "source": [
@@ -209,10 +201,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f91fd85",
+   "metadata": {},
+   "source": [
+    "HIVE-COTE is an ensemble of other methods including BOSS and TSF. 2 recent variants of HIVE-COTE, namely HIVE-COTE/ TDE (using TDE instead of BOSS) and HIVE-COTE/CIF (using CIF instead of TSF) have been shown to be significantly more accurate than HIVE-COTE, or any other existing method for TSC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f17c7034",
    "metadata": {},
    "source": [
-    "### <a id='toc1_3_2_'></a>[TDE](#toc0_)"
+    "### <a id='toc1_3_2_'></a>[Temporal Dictionary Ensemble (TDE)](#toc0_)"
    ]
   },
   {
@@ -221,6 +221,14 @@
    "metadata": {},
    "source": [
     "### <a id='toc1_3_3_'></a>[CIF (Canonical Interval Forest)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7c091c8",
+   "metadata": {},
+   "source": [
+    "The Canonical Interval Forest is a recent method which adapts the Time Series Forest (TSF) to use catch22 features and is significantly more accurate then either catch22 or TSF"
    ]
   },
   {
