--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -5630,7 +5630,9 @@
    "cell_type": "markdown",
    "id": "801a0376",
    "metadata": {},
-   "source": []
+   "source": [
+    "\"Fuzzy\" means vague. In general, Fuzzy Entropy quantifies the vagueness, ambiguity. This metric is widely used to quantify the complexity or irregularity in time series. Fuzzy entropy is a refinement of Sample Entropy (SampEN) and Approximate Entropy (ApEn)"
+   ]
   },
   {
    "cell_type": "code",
@@ -6091,9 +6093,27 @@
    "id": "44339c13",
    "metadata": {},
    "source": [
+    "In information theory, the entropy quantifies the average level of uncertainty or information associated withe variables' potential states or possible outcomes\n",
+    "\n",
     "IE can be calculated by \n",
     "\n",
-    "$$IE = - \\sum_{i = 1}^{n}p(IMF_i) * log_p(IMF_i)$$"
+    "$$IE = - \\sum_{i = 1}^{n}p(x) * log_p(x)$$\n",
+    "\n",
+    "with each x representing an outcome of the distribution. The higher entropy, the more randomness and irregularity. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41789556",
+   "metadata": {},
+   "source": [
+    "In time series context, working with temporal patterns. Instead of just looking at a single point, entropy-based methods: \n",
+    "\n",
+    "* Build embeddng vectors (with length m) from the signal.\n",
+    "* Measure similarity of local patterns\n",
+    "* Use entropy to quantify the likelihood that patterns repeat\n",
+    "\n",
+    "These natures can be implemented by the Approximate and Sample Entropy (ApEn/ SampEn) as practical estimators for finite, noisy time series"
    ]
   },
   {
@@ -6120,6 +6140,22 @@
    "metadata": {},
    "source": [
     "#### <a id='toc2_2_7_3_'></a>[Approximate/ Sample Entropy (ApEn/ SampEn)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65281364",
+   "metadata": {},
+   "source": [
+    "Approxiate Entropy (ApEN) was introduced by Pincus (1991) is a technique used to quantify the amount of regularity and the unpredictability of fluctuations over time-series data. ApEn was initially used to analyz chaotic dynamics data and later spread into other fields. The steps of ApEn will be as follows: \n",
+    "\n",
+    "1. Assume a time series of data u(1), u(2),......, u(N). N raw data values equally spaced in time. \n",
+    "\n",
+    "2. Let $m \\in Z^+$ be a positive integer, with $m<=N$, which represents the length of a run of data (a window)\n",
+    "\n",
+    "    Let $r \\in R^+$ be a real number, which specifies a filtering level. \n",
+    "\n",
+    "    Let n = N-m+1"
    ]
   },
   {
