--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5bfb59d2",
    "metadata": {},
    "outputs": [
@@ -186,6 +186,18 @@
     "\n",
     "#Evaluation\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ae0e440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.processing.denoising import Dimensional_Denoise\n",
+    "from src.utils.processing.extract_stock_index import extract_index\n",
+    "from src.utils.processing.feature_extraction import Feature"
    ]
   },
   {
@@ -6126,12 +6138,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66956b31",
+   "metadata": {},
+   "source": [
+    "Correlation Coefficient R is a statistical value ranging from -1 (perfect negative relationship) to 1 (perfect positive relationship) that measures the length and direction of a linear relationship between 2 time-dependent variables, or between a variable and its past values (autocorrelation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ad77853",
    "metadata": {},
    "source": [
-    "Correlation coefficient R is calculated by:\n",
+    "Correlation coefficient R (for example in IMFs evaluation) is calculated by:\n",
     "\n",
     "$$R(s, IMF_j) = \\frac{\\sum_{i = 1}^{N}(s - \\overline{s})(IMF_j - \\overline{IMF_j})}{\\sqrt{\\sum_{i = 1}^{N}(s - \\overline{s})^2} * \\sqrt{\\sum_{i = 1}^{N}(IMF_j - \\overline{IMF_j})^2}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26652dc3",
+   "metadata": {},
+   "source": [
+    "This is the Pearson correlation coefficient that compares the correlation between an IMF and the original signal s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bc2bd3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def correlation_coefficient(original_signal, component):\n",
+    "    \"\"\"\n",
+    "    Compute Pearson correlation coefficient between original original_signal and an component.\n",
+    "    \"\"\"\n",
+    "    s_mean = np.mean(original_signal)\n",
+    "    component_mean = np.mean(component)\n",
+    "\n",
+    "    numerator = np.sum((original_signal - s_mean) * (component - component_mean))\n",
+    "    denominator = np.sqrt(np.sum((original_signal - s_mean)**2) * np.sum((component - component_mean)**2))\n",
+    "\n",
+    "    return numerator / denominator if denominator != 0 else 0.0"
    ]
   },
   {
@@ -6147,15 +6195,157 @@
    "id": "65281364",
    "metadata": {},
    "source": [
-    "Approxiate Entropy (ApEN) was introduced by Pincus (1991) is a technique used to quantify the amount of regularity and the unpredictability of fluctuations over time-series data. ApEn was initially used to analyz chaotic dynamics data and later spread into other fields. The steps of ApEn will be as follows: \n",
+    "Approxiate Entropy (ApEN) was introduced by Pincus (1991) is a technique used to quantify the amount of regularity and the unpredictability of fluctuations over time-series data. ApEn was initially used to analyze chaotic dynamics data and later spread into other fields. \n",
+    "\n",
+    "In General: a Low ApEn -> sequence is more predictable/ regular (patterns repeat often) while High ApEn -> more random sequence/ irregular\n",
+    "\n",
+    "The steps of ApEn will be as follows: \n",
     "\n",
     "1. Assume a time series of data u(1), u(2),......, u(N). N raw data values equally spaced in time. \n",
     "\n",
-    "2. Let $m \\in Z^+$ be a positive integer, with $m<=N$, which represents the length of a run of data (a window)\n",
+    "2. Let $m \\in Z^+$ be a positive integer, with $m \\le N$, which represents the embedding dimension (usually 2 or 3)\n",
     "\n",
-    "    Let $r \\in R^+$ be a real number, which specifies a filtering level. \n",
+    "    Let $r \\in R^+$ be a real number, which specifies a filtering level or tolerance (usually r = 0.1 x std(X) - 0.25 x std(X)) \n",
     "\n",
-    "    Let n = N-m+1"
+    "    Let n = N-m+1\n",
+    "\n",
+    "3. Define x(i) = [u(i), u(i+1),....,u(i+m-1)] for each i where $1\\le i \\le n$. In other words, x(i) is an m-dimensional vector that contains window starting with u(i)\n",
+    "\n",
+    "    Define the distance between 2 vectors x(i) and x(j) as the maximum of the distances between their respective components, given by\n",
+    "\n",
+    "    $$d[x(i), x(j)] = max_k (|x(i)_k - x(j)_k|)$$\n",
+    "\n",
+    "    $$ = max_k(|u(i+k-1) - u(j+k-1)|)$$\n",
+    "\n",
+    "    for $1 \\le k \\le m$. This is the Chebyshev distance\n",
+    "\n",
+    "4. Define a count $C_i^m$ as\n",
+    "\n",
+    "$$C_i^m(r) = \\frac{\\#j, d[x(i), x(j)] \\le r}{n}$$\n",
+    "\n",
+    "for each i where $1 \\le i, j \\le n$. j takes on all values between 1 and n, the match will be counted when i = j\n",
+    "\n",
+    "5. Define \n",
+    "\n",
+    "$$\\phi^m(r) = \\frac{1}{n}\\sum_{i = 1}^{n}ln(C_i^m(r))$$\n",
+    "\n",
+    "for a fixed m, r and n as set in 2\n",
+    "\n",
+    "6. Define ApEn as\n",
+    "\n",
+    "$$ApEn(m, r, N)(u) = \\phi^m(r) - \\phi^{m + 1}(r)$$\n",
+    "\n",
+    "Notice that each $\\phi$ represents a ln(probability) at m embeding dimensions so taking the subtraction is equally $ln(\\frac{P(m)}{P(m+1)})$, this will make it more relatable to the SampEn written below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "564f494c",
+   "metadata": {},
+   "source": [
+    "The Range of ApEn will range from 0 to 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fff20c43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_IBM = extract_index('IBM')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3474b76b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def ap_entropy(time_series, run_length, filter_level) -> float:\n",
+    "    \"\"\"\n",
+    "    Approximate entropy\n",
+    "\n",
+    "    >>> import random\n",
+    "    >>> regularly = [85, 80, 89] * 17\n",
+    "    >>> print(f\"{approx_entropy(regularly, 2, 3):e}\")\n",
+    "    1.099654e-05\n",
+    "    >>> randomly = [random.choice([85, 80, 89]) for _ in range(17*3)]\n",
+    "    >>> 0.8 < approx_entropy(randomly, 2, 3) < 1\n",
+    "    True\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def _maxdist(x_i, x_j):\n",
+    "        return max(abs(ua - va) for ua, va in zip(x_i, x_j))\n",
+    "\n",
+    "    def _phi(m):\n",
+    "        n = time_series_length - m + 1\n",
+    "        x = [\n",
+    "            [time_series[j] for j in range(i, i + m - 1 + 1)]\n",
+    "            for i in range(time_series_length - m + 1)\n",
+    "        ]\n",
+    "        counts = [\n",
+    "            sum(1 for x_j in x if _maxdist(x_i, x_j) <= filter_level) / n for x_i in x\n",
+    "        ]\n",
+    "        return sum(math.log(c) for c in counts) / n\n",
+    "\n",
+    "    time_series_length = len(time_series)\n",
+    "\n",
+    "    return abs(_phi(run_length + 1) - _phi(run_length))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8986fc10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8981761013253831"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Sample evaluation of entropy\n",
+    "\n",
+    "ap_entropy(df_IBM['Close'], 2, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f2c2941",
+   "metadata": {},
+   "source": [
+    "Sample Entropy is a modification of Approximate Entropy with 2 advantages over ApEn: data length independence and relatively trouble-free implementation. Also there's a small computational difference.\n",
+    "\n",
+    "Sample Entropy (SampEn) is a measure of complexity but it doesn't include self-similar patterns as ApEn does. For a given embedding dimension m (usually 2), tolerance r (usually 0.2 x std(x)) and number of data points N, SampEn is the egative natural logairthm of the P that if 2 sets of simultaneous data points of length m have distance < r then 2 sets of simultaneous data points of length m + 1 also have distance < r\n",
+    "\n",
+    "Assume a time-series data set of length N = {$x_1, x_2, x_3,.....,x_N$} with a constant time interval $\\tau$. Define an embedding dimension m that\n",
+    "\n",
+    "$$X_m(i) = {x_i, x_{i+1}, x_{i+2},....x_{i+m-1}}$$\n",
+    "\n",
+    "and the distance function $d[X_m(i), X_m(j)]$ as the Chebyshev distance. \n",
+    "\n",
+    "We define the Sample Entropy to be\n",
+    "\n",
+    "$$SampEn = -ln\\frac{A}{B}$$\n",
+    "\n",
+    "with \n",
+    "\n",
+    "A = number of template vector pairs having $d[X_{m+1}(i), X_{m+1}(j)] < r$\n",
+    "\n",
+    "B = number of template vector pairs having $d[X_{m}(i), X_{m}(j)] < r$\n",
+    "\n",
+    "It's clear that A will always have values $\\le$ B -> SampEn($m, r, \\tau$) will always either be 0 or > 0. Smaller SampEn indicate more self-similarity in dataset/ less noise"
    ]
   },
   {
@@ -6168,18 +6358,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7669aba",
+   "metadata": {},
+   "source": [
+    "For specific practical usage:\n",
+    "\n",
+    "- 0-0.5 -> very regular signals (periodic, deterministic)\n",
+    "\n",
+    "- 0.5 - 1 -> moderately irregular signals \n",
+    "\n",
+    "- 1.5 - 3 -> highly irregular/ noisy signals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e69e8fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "from math import log\n",
+    "\n",
+    "def construct_templates(timeseries_data: list, m: int = 2):\n",
+    "    num_windows = len(timeseries_data) - m + 1\n",
+    "    return [timeseries_data[x : x + m] for x in range(0, num_windows)]\n",
+    "\n",
+    "def get_matches(templates: list, r: float):\n",
+    "    return len(\n",
+    "        list(filter(lambda x: is_match(x[0], x[1], r), combinations(templates, 2)))\n",
+    "    )\n",
+    "\n",
+    "def is_match(template_1: list, template_2: list, r: float):\n",
+    "    return all([abs(x - y) < r for (x, y) in zip(template_1, template_2)])\n",
+    "\n",
+    "def sample_entropy(timeseries_data: list, window_size: int, r: float):\n",
+    "    B = get_matches(construct_templates(timeseries_data, window_size), r)\n",
+    "    A = get_matches(construct_templates(timeseries_data, window_size + 1), r)\n",
+    "    return -log(A / B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4fd81bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1039018392499966"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_entropy(df_IBM['Close'], 2, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bb710f8",
    "metadata": {},
    "source": [
-    "The output signals from the decomposition will be split into \n",
+    "Combining the characteristics of the 2 analysis test (SampEn and Correlation Coefficient), we can classify and divide the output signals from EMD (variants) into 3 types \n",
     "\n",
-    "* Noise-dominant components\n",
-    "* Transition components\n",
-    "* Useful signal components\n",
+    "* Noise-dominant components (high entropy, low correlation)\n",
+    "* Transition components (medium entropy or medium correlation)\n",
+    "* Useful signal components (low entropy, high correlation)\n",
     "\n",
-    "Using Correlation Coefficient R + Information Entropy to split the signals from ICEEMDAN\n",
-    "\n",
-    "Another Decomposition algorithm can be used afterwards to further decompose the output transition signal (i.e. VMD decomposes output from ICEEMDAN, produces the ICEEMDAN-VMD framework)"
+    "As the Transition components can contain the combination for both white noise and important signal components, another Decomposition algorithm can be used afterwards to further decompose the output transition signal further to extract the most out of the original series(i.e. VMD decomposes output from ICEEMDAN, produces the ICEEMDAN-VMD framework)"
    ]
   },
   {
@@ -6191,14 +6442,10 @@
     "\n",
     "$$CI = N(IE) * N(R)$$\n",
     "\n",
-    "where N(x) represents the normalization processing\n"
+    "where N(x) represents the normalization processing (MaxMinScaler) $$N(x) = \\frac{x-x_{min}}{x_{max} - x_{min}}$$\n",
+    "\n",
+    "The multiplication implies that if either memtric is unfavorable (near 0 after normalization) then CI becomes small, this penalizes IMFs that are only good in 1 dimension (correlated but ver noisy or vice versa) and makes sure that IMFs strong in both measures will stand out"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e955925",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
