--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5bfb59d2",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6ae0e440",
    "metadata": {},
    "outputs": [],
@@ -1326,6 +1326,36 @@
     "    return k_percent, d_percent\n",
     "\n",
     "df_NFLX['%K'], df_NFLX['%D'] = stochastic_oscillator(df_NFLX, k_period=14, d_period=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c21a88",
+   "metadata": {},
+   "source": [
+    "#### Boilinger Bands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5f3439f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boilinger(df):\n",
+    "    '''\n",
+    "    Return the 2 columns boilinger_up and boilinger_down as 2 bands along the SMA20 line of the Close series\n",
+    "    '''\n",
+    "    df['SMA20'] = df['Close'].rolling(window=20).mean()\n",
+    "    df['STD20'] = df['Close'].rolling(window=20).std()\n",
+    "    \n",
+    "    df['boilinger_up'] = df['SMA20'] + 2* df['STD20']\n",
+    "    df['boilinger_down'] = df['SMA20'] - 2* df['STD20']\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "df_NFLX = boilinger(df_NFLX)"
    ]
   },
   {
@@ -3225,7 +3255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3f512ceb",
    "metadata": {},
    "outputs": [],
@@ -6367,7 +6397,9 @@
     "\n",
     "- 0.5 - 1 -> moderately irregular signals \n",
     "\n",
-    "- 1.5 - 3 -> highly irregular/ noisy signals"
+    "- 1.5 - 3 -> highly irregular/ noisy signals\n",
+    "\n",
+    "- $>3$ -> mostly random noise"
    ]
   },
   {
